<resources>

    <!-- App name -->
    <string name="app_name">Connected</string>

    <!-- Navigation -->
    <string name="title_home">Home</string>
    <string name="title_messages">Messages</string>
    <string name="title_relations">Relations</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="notifications_icon">Notifications icon</string>
    <string name="search_icon">Search icon</string>
    <string name="filter_icon">Filter icon</string>
    <string name="email_address_input_hint">Your email address</string>
    <string name="content_description_end_icon">Simple icon</string>
    <string name="password_input_hint">Your password</string>
    <string name="login">Login</string>
    <string name="anonymous_chat">Anonymous chat</string>
    <string name="need_new_account">Need a new account ?</string>
    <string name="pseudo_input_hint">Choose a pseudonym</string>
    <string name="re_password_input_hint">Retype your password</string>
    <string name="register">Register</string>
    <string name="already_member">Already member ? Login </string>
    <string name="logo">Logo</string>
    <string name="edit_account_info">Edit account info </string>
    <string name="language">Language</string>
    <string name="display_settings">Settings</string>
    <string name="contact_us">Contact us</string>
    <string name="terms_conditions">Terms and conditions</string>
    <string name="log_out">Log out</string>
    <string name="unknown_error">Unknown error !</string>
    <string name="invalid_email">Invalid email address !</string>
    <string name="invalid_password">Invalid password !</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="friends">Friends</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="profile_picture">Profile picture</string>
    <string name="likes">likes</string>
    <string name="name_input_hint">Your full name</string>
    <string name="birth_date_input_hint">Your birth date</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="gender">Gender :</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_pseudo">Invalid pseudonym ! (use letters, numbers, underscore and hyphen only)</string>
    <string name="passwords_do_not_match">Your passwords do not match !</string>
    <string name="contact_no_input_hint">Your phone number</string>
    <string name="invalid_contact_no">Invalid phone number !</string>
    <string name="empty_field_in_form_message">Please fill in all fields !</string>
    <string name="log_out_conf_mess">"Are you sure you want to log out? "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about_default_message">Hi there ! I am using Connected.</string>
    <string name="city_input_hint">Your City</string>
    <string name="invalid_location">Invalid city name !</string>
    <string name="years">Years</string>
    <string name="select_photo_intent_title">Please select a photo</string>
    <string name="you_may_know">You May know</string>
    <string name="contact">Contact</string>
    <string name="no_followers">Empty followers list !</string>
    <string name="no_following">Empty following list !</string>
    <string name="no_friends">Empty friends list !</string>
</resources>