<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_baseline_email_24"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_relations"
        android:icon="@drawable/ic_user_friends_svgrepo_com"
        android:title="@string/title_relations" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user_svgrepo_com"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />
</menu>