<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile.SeeUserProfileActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/base_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_profile_menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/profile_picture"
                android:src="@drawable/ic_profile_menu_50"
                app:layout_constraintStart_toEndOf="@+id/iv_profile_picture"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile_picture"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/empty_profile_picture"
                app:civ_border_color="?attr/baseColor"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_user_pseudo_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile_picture" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:gravity="bottom"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_birthday_cake_24"
                app:layout_constraintStart_toStartOf="@id/tv_display_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_display_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:drawableStart="@drawable/ic_location_24"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/tv_age"
                app:layout_constraintTop_toBottomOf="@+id/tv_age" />

            <TableLayout
                android:id="@id/tl_relations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="25dp"
                android:stretchColumns="*"
                app:layout_constraintTop_toBottomOf="@id/tv_location">

                <TableRow android:layout_width="0dp">

                    <ImageView
                        android:id="@+id/iv_likes"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/content_description_end_icon"
                        android:src="@drawable/ic_like_icon_empty" />

                    <ImageView
                        android:id="@+id/iv_followers"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/content_description_end_icon"
                        android:src="@drawable/ic_user_follow" />

                    <ImageView
                        android:id="@+id/iv_following"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/content_description_end_icon"
                        android:src="@drawable/ic_user_following_50" />

                    <ImageView
                        android:id="@+id/iv_friends"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:backgroundTint="?attr/baseColor"
                        android:contentDescription="@string/content_description_end_icon"
                        android:src="@drawable/ic_friends_50" />
                </TableRow>

                <TableRow android:layout_width="0dp">

                    <TextView
                        android:id="@+id/tv_likes"
                        android:layout_gravity="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_followers"
                        android:layout_gravity="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_following"
                        android:layout_gravity="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_friends"
                        android:layout_gravity="center"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_marginBottom="25dp">

                    <TextView
                        android:id="@+id/tv_likes_label"
                        android:layout_gravity="center"
                        android:text="@string/likes"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_followers_label"
                        android:layout_gravity="center"
                        android:text="@string/followers"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_following_label"
                        android:layout_gravity="center"
                        android:text="@string/following"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_friends_label"
                        android:layout_gravity="center"
                        android:text="@string/friends"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/about_default_message"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/tl_relations" />

            <Button
                android:id="@+id/btn_contact"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="?attr/baseColor"
                android:text="@string/contact"
                app:icon="@drawable/ic_contact_30"
                app:layout_constraintTop_toBottomOf="@+id/tv_about" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/nav_bar"
        layout="@layout/bottom_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />
</LinearLayout>